welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^ColumnByColumn:2: warning: enclosing method test has result type Unit: return value discarded
    return true
    ^ColumnByColumn:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^ColumnByColumn:4: warning: enclosing method test has result type Unit: return value discarded
  return false
  ^ColumnByColumn:10: error: value unary_! is not a member of Unit
  while (!test()) {
         ^